# IPPD

Exercicios/: merge.c
OpenCL/: simpleMultiply.cl
OpenMP/: Diretivas.txt  hello.cpp  helloWorld.cpp  meuPrimos.c  meuVetSum  meuVetSum.c  primos  primosOpenMP.c  q4  questao4.c  trap.cpp
OpenMPI/: README.md  primos  primos.c  primosMpi.c
OpenMPI/MPI_Hello_World/: hello_mpi.cpp
OpenMPI/PingPong/: pingpong.cpp
Simulado Bretanha/: prova1.docx  questao_1.odt  questao_2.odt  questao_3.odt
Simulado Bretanha/Bretana/questao_4/: .bretana.c.swp  bretana.c  err_code.h
Simulado IPPD/: prova1-parte2  questao_1.odt  questao_2.odt
Simulado IPPD/exemplos de cвdigo/Arthur/mpi/: mpi.txt
Simulado IPPD/exemplos de cвdigo/Arthur/opencl/: opencl.txt
Simulado IPPD/exemplos de cвdigo/Bruno/: README.md
Simulado IPPD/exemplos de cвdigo/Bruno/MPI/: README.md  mergesort_mpi.c  pong_mpi.c  send_recv_mpi.c
Simulado IPPD/exemplos de cвdigo/Bruno/OpenCL/: README.md  hello_cl.c
Simulado IPPD/exemplos de cвdigo/Bruno/OpenMP/: README.md  merge.c
Simulado IPPD/exemplos de cвdigo/Gabriel/: main.c  merge-mpi.c  mergeSort-omp.c  ring.c  vector_add_kernel.cl
Simulado IPPD/exemplos de cвdigo/Hello World MPI Visual Studio/: MPIHelloWord.sln
Simulado IPPD/exemplos de cвdigo/Igor/: CMakeLists.txt  run.sh
Simulado IPPD/exemplos de cвdigo/Igor/src/: def.hpp  doc.hpp  main.cc  opencl_add_2_vector.cc
Simulado IPPD/exemplos de cвdigo/Jader/: 0822.txt  0827.md  0829.md  1001aula.md  README.md  mergeMPI.c
Simulado IPPD/exemplos de cвdigo/Patrick/: README.md
(+99 files in other folders)
